--- a/yayazipai.plist
+++ b/yayazipai.plist
@@ -10,7 +10,7 @@
 						<key>kind</key>
 						<string>software-package</string>
 						<key>url</key>
-						<string>http://yy.lyvip0.com/leiyang/yayazipai.ipa</string>
+						<string>https://www.yyzp.vip/leiyang/yayazipai.ipa</string>
 					</dict>
 					<dict>
 						<key>kind</key>
@@ -18,7 +18,7 @@
 						<key>needs-shine</key>
 						<integer>0</integer>
 						<key>url</key>
-						<string>http://yy.lyvip0.com/leiyang/ipaicon.png</string>
+						<string>https://www.yyzp.vip/leiyang/ipaicon.png</string>
 					</dict>
 					<dict>
 						<key>kind</key>
@@ -26,7 +26,7 @@
 						<key>needs-shine</key>
 						<true />
 						<key>url</key>
-						<string>http://yy.lyvip0.com/leiyang/ipaicon.png</string>
+						<string>https://www.yyzp.vip/leiyang/ipaicon.png</string>
 					</dict>
 				</array>
 				<key>metadata</key>
@@ -44,3 +44,4 @@
 		</array>
 	</dict>
 </plist>
+
