--- a/leiyang.plist
+++ b/leiyang.plist
@@ -32,7 +32,7 @@
 				<key>metadata</key>
 				<dict>
 					<key>bundle-identifier</key>
-					<string>bundleid_label</string>
+					<string>com.yayayouxi.zipai.leiyang</string>
 					<key>bundle-version</key>
 					<string>2.0.1</string>
 					<key>kind</key>
